--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -1,5 +1,5 @@
 .popup-overlay {
-  z-index: 9999;
+  z-index: 250;
 }
 
 .popup-content div {
